css media query updated to background-attachment to stop image been croped on smaller device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,6 +296,13 @@ a {
 
     html,body { height: 100%; min-height: 100%; }
 
+    body {
+        background-attachment: local;
+        background-size: scroll;
+    }
+    
+    
+
     .selection {
         display: grid;
         grid-template-columns: 10vw repeat(2, minmax(40vw, auto)) 10vw;
